lang/macro/tests/ui/fail/31-invalid-meta-info-value.stderr
error: invalid hash type: sm4
 --> $DIR/31-invalid-meta-info-value.rs:3:51
  |
3 | #[liquid::contract(version = "0.1.0", hash_type = "sm4")]
  |                                                   ^^^^^
